# o80_roboball2d

./: CMakeLists.txt  README.md  package.xml
demo/: roboball2d_interface_demo.cpp
include/o80_roboball2d/: ball_gun_action.hpp  ball_gun_driver.hpp  driver.hpp  item.hpp  joint.hpp  mirror_action.hpp  mirror_joint.hpp  pybind11_helper.hpp  pybind_helper.hpp  reader.hpp  robot.hpp  standalone.hpp  standalone_ball_gun.hpp  standalone_mirroring.hpp  standalone_torques.hpp  standalone_vision.hpp  torques_action.hpp  world_state.hpp  writer.hpp
scripts/: context_manager.py  context_manager_example.py  env.py  example.py  hardware_control.py  logger_file.py  orchestrator.py  plotting.py  run_reality.py  run_simulation.py  run_support.py  run_vision.py  world_state_conversions.py
scripts/deprecated/: env.py  orchestrator.py  run_reality.py
scripts/test2/: env.py  orchestrator.py  run_simulation.py
src/: ball_gun_action.cpp  ball_gun_driver.cpp  joint.cpp  mirror_action.cpp  mirror_joint.cpp  torques_action.cpp
srcpy/: wrappers.cpp  wrappers_5balls_ball_gun.cpp  wrappers_5balls_mirroring.cpp  wrappers_ball_gun.cpp  wrappers_mirroring.cpp  wrappers_torques.cpp  wrappers_vision.cpp
